# cppgol

./: CMakeLists.txt  README.md  conanfile.txt
include/grid/: grid.hpp
src/: abstract_grid.cpp  grid_set.cpp  grid_vector.cpp  main.cpp  set_grid.cpp  vector_grid.cpp
